[gd_scene load_steps=52 format=3 uid="uid://bbyf5pti5hayd"]

[ext_resource type="Texture2D" uid="uid://bwliwgl5okv8b" path="res://Sprites/idle-2298x3084.png" id="1_80l0a"]
[ext_resource type="Script" path="res://Scripts/player_2.gd" id="1_cossb"]
[ext_resource type="Texture2D" uid="uid://cd7kepklkptb" path="res://Sprites/dead-3775x3508.png" id="1_ompuh"]
[ext_resource type="Texture2D" uid="uid://7yfuwpiipe5v" path="res://Sprites/Block.png" id="2_6sh56"]
[ext_resource type="Texture2D" uid="uid://cma6iw0dtswk4" path="res://Sprites/run-2480x3508.png" id="2_g4wkw"]
[ext_resource type="Texture2D" uid="uid://qdxwabjde0gt" path="res://Sprites/jump-1725x2033.png" id="2_sk1ab"]
[ext_resource type="Texture2D" uid="uid://ckuk4v0ohcg8w" path="res://Sprites/Demaged-1.png" id="7_es34n"]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_guyav"]

[sub_resource type="AtlasTexture" id="AtlasTexture_pu6uy"]
atlas = ExtResource("2_6sh56")
region = Rect2(0, 0, 2480, 3508)

[sub_resource type="AtlasTexture" id="AtlasTexture_7l81y"]
atlas = ExtResource("1_ompuh")
region = Rect2(0, 0, 3775, 3508)

[sub_resource type="AtlasTexture" id="AtlasTexture_f6pke"]
atlas = ExtResource("1_ompuh")
region = Rect2(3775, 0, 3775, 3508)

[sub_resource type="AtlasTexture" id="AtlasTexture_dbfic"]
atlas = ExtResource("1_ompuh")
region = Rect2(7550, 0, 3775, 3508)

[sub_resource type="AtlasTexture" id="AtlasTexture_p55wv"]
atlas = ExtResource("1_ompuh")
region = Rect2(0, 3508, 3775, 3508)

[sub_resource type="AtlasTexture" id="AtlasTexture_s07rn"]
atlas = ExtResource("1_ompuh")
region = Rect2(3775, 3508, 3775, 3508)

[sub_resource type="AtlasTexture" id="AtlasTexture_goxex"]
atlas = ExtResource("1_ompuh")
region = Rect2(7550, 3508, 3775, 3508)

[sub_resource type="AtlasTexture" id="AtlasTexture_kre01"]
atlas = ExtResource("1_ompuh")
region = Rect2(0, 7016, 3775, 3508)

[sub_resource type="AtlasTexture" id="AtlasTexture_d4b6p"]
atlas = ExtResource("2_sk1ab")
region = Rect2(5175, 2033, 1725, 2033)

[sub_resource type="AtlasTexture" id="AtlasTexture_7lt87"]
atlas = ExtResource("1_80l0a")
region = Rect2(0, 0, 2298, 3084)

[sub_resource type="AtlasTexture" id="AtlasTexture_g2w4y"]
atlas = ExtResource("1_80l0a")
region = Rect2(2298, 0, 2298, 3084)

[sub_resource type="AtlasTexture" id="AtlasTexture_lgqi8"]
atlas = ExtResource("1_80l0a")
region = Rect2(4596, 0, 2298, 3084)

[sub_resource type="AtlasTexture" id="AtlasTexture_o5ck8"]
atlas = ExtResource("1_80l0a")
region = Rect2(0, 3084, 2298, 3084)

[sub_resource type="AtlasTexture" id="AtlasTexture_xu47y"]
atlas = ExtResource("1_80l0a")
region = Rect2(2298, 3084, 2298, 3084)

[sub_resource type="AtlasTexture" id="AtlasTexture_msjyo"]
atlas = ExtResource("1_80l0a")
region = Rect2(4596, 3084, 2298, 3084)

[sub_resource type="AtlasTexture" id="AtlasTexture_7u5se"]
atlas = ExtResource("1_80l0a")
region = Rect2(0, 6168, 2298, 3084)

[sub_resource type="AtlasTexture" id="AtlasTexture_3yl0t"]
atlas = ExtResource("1_80l0a")
region = Rect2(2298, 6168, 2298, 3084)

[sub_resource type="AtlasTexture" id="AtlasTexture_smdc8"]
atlas = ExtResource("2_sk1ab")
region = Rect2(5175, 0, 1725, 2033)

[sub_resource type="AtlasTexture" id="AtlasTexture_08h6m"]
atlas = ExtResource("2_sk1ab")
region = Rect2(0, 2033, 1725, 2033)

[sub_resource type="AtlasTexture" id="AtlasTexture_fvil1"]
atlas = ExtResource("2_sk1ab")
region = Rect2(1725, 2033, 1725, 2033)

[sub_resource type="AtlasTexture" id="AtlasTexture_0frhd"]
atlas = ExtResource("2_sk1ab")
region = Rect2(3450, 2033, 1725, 2033)

[sub_resource type="AtlasTexture" id="AtlasTexture_e8m1y"]
atlas = ExtResource("2_sk1ab")
region = Rect2(5175, 2033, 1725, 2033)

[sub_resource type="AtlasTexture" id="AtlasTexture_5a2yn"]
atlas = ExtResource("2_g4wkw")
region = Rect2(0, 0, 2480, 3508)

[sub_resource type="AtlasTexture" id="AtlasTexture_h686j"]
atlas = ExtResource("2_g4wkw")
region = Rect2(2480, 0, 2480, 3508)

[sub_resource type="AtlasTexture" id="AtlasTexture_0nbxn"]
atlas = ExtResource("2_g4wkw")
region = Rect2(4960, 0, 2480, 3508)

[sub_resource type="AtlasTexture" id="AtlasTexture_42l6n"]
atlas = ExtResource("2_g4wkw")
region = Rect2(0, 3508, 2480, 3508)

[sub_resource type="AtlasTexture" id="AtlasTexture_7s046"]
atlas = ExtResource("2_g4wkw")
region = Rect2(2480, 3508, 2480, 3508)

[sub_resource type="AtlasTexture" id="AtlasTexture_vq38k"]
atlas = ExtResource("2_g4wkw")
region = Rect2(4960, 3508, 2480, 3508)

[sub_resource type="AtlasTexture" id="AtlasTexture_85sx2"]
atlas = ExtResource("7_es34n")
region = Rect2(0, 0, 2480, 3508)

[sub_resource type="SpriteFrames" id="SpriteFrames_ygcyv"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_pu6uy")
}],
"loop": true,
"name": &"Block",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_7l81y")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_f6pke")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_dbfic")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_p55wv")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_s07rn")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_goxex")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_kre01")
}],
"loop": false,
"name": &"Death",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_d4b6p")
}],
"loop": true,
"name": &"Fall",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_7lt87")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_g2w4y")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_lgqi8")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_o5ck8")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_xu47y")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_msjyo")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_7u5se")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_3yl0t")
}],
"loop": true,
"name": &"Idle",
"speed": 7.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_smdc8")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_08h6m")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_fvil1")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_0frhd")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_e8m1y")
}],
"loop": false,
"name": &"Jump",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_5a2yn")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_h686j")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_0nbxn")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_42l6n")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_7s046")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_vq38k")
}],
"loop": true,
"name": &"Run",
"speed": 7.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_85sx2")
}],
"loop": false,
"name": &"Take_Hit",
"speed": 5.0
}]

[sub_resource type="Animation" id="Animation_52rsf"]
length = 0.2
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AnimatedSprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("AnimatedSprite2D:animation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": ["Block"]
}

[sub_resource type="Animation" id="Animation_8jvvn"]
length = 1.4
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AnimatedSprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2, 0.4, 0.6, 0.8, 1, 1.2),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 4, 5, 6]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("AnimatedSprite2D:animation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": ["Death"]
}
tracks/2/type = "method"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath(".")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(1.4),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [],
"method": &"change_scene"
}]
}

[sub_resource type="Animation" id="Animation_otmnj"]
length = 0.2
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AnimatedSprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("AnimatedSprite2D:animation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": ["Fall"]
}

[sub_resource type="Animation" id="Animation_t4gaj"]
length = 1.14286
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AnimatedSprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.142857, 0.285714, 0.428571, 0.571429, 0.714286, 0.857143, 1),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 4, 5, 6, 7]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("AnimatedSprite2D:animation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": ["Idle"]
}

[sub_resource type="Animation" id="Animation_75rfp"]
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AnimatedSprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2, 0.4, 0.6, 0.8),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 4]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("AnimatedSprite2D:animation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": ["Jump"]
}

[sub_resource type="Animation" id="Animation_xtrb5"]
length = 0.857143
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AnimatedSprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.142857, 0.285714, 0.428571, 0.571429, 0.714286),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 4, 5]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("AnimatedSprite2D:animation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": ["Run"]
}

[sub_resource type="Animation" id="Animation_8ci3f"]
length = 0.2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AnimatedSprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("AnimatedSprite2D:animation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": ["Take_Hit"]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_aydq1"]
_data = {
"Block": SubResource("Animation_52rsf"),
"Death": SubResource("Animation_8jvvn"),
"Fall": SubResource("Animation_otmnj"),
"Idle": SubResource("Animation_t4gaj"),
"Jump": SubResource("Animation_75rfp"),
"Run": SubResource("Animation_xtrb5"),
"Take_Hit": SubResource("Animation_8ci3f")
}

[sub_resource type="Animation" id="Animation_jgwt6"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("DamageText:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(-10, -32)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("DamageText:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}

[sub_resource type="Animation" id="Animation_rq4ux"]
resource_name = "damage_text"
length = 0.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("DamageText:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(-10, -32), Vector2(-10, -41)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("DamageText:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.233333, 0.5),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Color(0.861217, 0.522389, 0.39337, 1), Color(0.92618, 0.474118, 0.354167, 1), Color(1, 1, 1, 0)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_j35kp"]
_data = {
"RESET": SubResource("Animation_jgwt6"),
"damage_text": SubResource("Animation_rq4ux")
}

[sub_resource type="GDScript" id="GDScript_i3kek"]
script/source = "extends Node2D


# Called when the node enters the scene tree for the first time.
func _ready() -> void:
	pass

# Called every frame. 'delta' is the elapsed time since the previous frame.
func _process(_delta: float) -> void:
	pass
"

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_8dvjd"]

[node name="Player_2" type="CharacterBody2D"]
collision_layer = 2
script = ExtResource("1_cossb")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CapsuleShape2D_guyav")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
position = Vector2(0, -2)
scale = Vector2(0.0131636, 0.0131636)
sprite_frames = SubResource("SpriteFrames_ygcyv")
animation = &"Death"
frame = 6

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2(0, -64)
zoom = Vector2(3, 3)
process_callback = 0
position_smoothing_enabled = true

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_aydq1")
}

[node name="healthText" type="Node2D" parent="."]

[node name="DamageText" type="Label" parent="healthText"]
offset_left = -10.0
offset_top = -32.0
offset_right = 30.0
offset_bottom = -4.0
scale = Vector2(0.5, 0.5)
theme_override_font_sizes/font_size = 20
text = "20"
horizontal_alignment = 1
vertical_alignment = 1
metadata/_edit_use_anchors_ = true

[node name="DamageAnimation" type="AnimationPlayer" parent="healthText"]
libraries = {
"": SubResource("AnimationLibrary_j35kp")
}

[node name="DamageBox" type="Node2D" parent="."]
script = SubResource("GDScript_i3kek")

[node name="HurtBox" type="Area2D" parent="DamageBox"]
collision_layer = 32
collision_mask = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="DamageBox/HurtBox"]
shape = SubResource("CapsuleShape2D_8dvjd")
